@@ -86,6 +86,10 @@ Other Changes
 
   Refs #6462
 
+* Add multiplicity association support in pyreverse
+
+  Ref #6434
+
 * Improved wording of the message of ``deprecated-module``
 
   Closes #6169
