@@ -29,6 +29,7 @@ classDiagram
     TYPE : str
     relation
     relation2
+    relation3 : list[DoNothing2]
     top : str
     from_value(value: int)
     increment_value() -> None
@@ -39,3 +40,4 @@ classDiagram
   DoNothing --* Ancestor : cls_member
   DoNothing --* Specialization : relation
   DoNothing2 --* Specialization : relation2
+  DoNothing2 "0..*" --* Specialization : relation3
